lox-tests/tests/return/at_top_level.stderr
ERROR: Cannot return outside of a function
 --> 1:1
  |
1 | return "wat"; // Error at 'return': Can't return from top-level code.
  | ^-----------^
